# ansinizer

./: CMakeLists.txt
include/: Frontend.h  OptionManager.h  Transformation.h
src/: FileManager.cpp  Frontend.cpp  Main.cpp  OptionManager.cpp  Transformation.cpp
